$ cat a2.f90 integer, parameter :: A(-3:7,2)=0 integer, parameter, dimension(3) :: V = (/ 2, 4, 6 /) integer, parameter, dimension(3) :: B = A(V,1) END $ gfortran a2.f90 In file a2.f90:3 integer, parameter, dimension(3) :: B = A(V,1) 1 Error: Incompatible ranks 1 and 2 in assignment at (1)
Subject: Bug 29393 Author: eedelman Date: Tue Oct 24 17:01:30 2006 New Revision: 118008 URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=118008 Log: fortran/ 2006-10-24 Erik Edelmann <eedelman@gcc.gnu.org> PR fortran/29393 * expr.c (simplify_parameter_variable): Keep rank of original expression. Testsuite/ 2006-10-24 Erik Edelmann <eedelman@gcc.gnu.org> PR fortran/29393 * gfortran.dg/initialize_2.f90: New. Added: trunk/gcc/testsuite/gfortran.dg/initialization_2.f90 Modified: trunk/gcc/fortran/ChangeLog trunk/gcc/fortran/expr.c trunk/gcc/testsuite/ChangeLog
Subject: Bug 29393 Author: eedelman Date: Tue Oct 24 20:40:19 2006 New Revision: 118010 URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=118010 Log: fortran/ 2006-10-24 Erik Edelmann <eedelman@gcc.gnu.org> PR fortran/29393 * expr.c (simplify_parameter_variable): Keep rank of original expression. testsuite/ 2006-10-24 Erik Edelmann <eedelman@gcc.gnu.org> PR fortran/29393 * gfortran.dg/initialize_2.f90: New. Added: branches/gcc-4_2-branch/gcc/testsuite/gfortran.dg/initialization_2.f90 Modified: branches/gcc-4_2-branch/gcc/fortran/ChangeLog branches/gcc-4_2-branch/gcc/fortran/expr.c branches/gcc-4_2-branch/gcc/testsuite/ChangeLog
Subject: Bug 29393 Author: eedelman Date: Tue Oct 24 20:45:29 2006 New Revision: 118011 URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=118011 Log: fortran/ 2006-10-24 Erik Edelmann <eedelman@gcc.gnu.org> PR fortran/29393 * expr.c (simplify_parameter_variable): Keep rank of original expression. testsuite/ 2006-10-24 Erik Edelmann <eedelman@gcc.gnu.org> PR fortran/29393 * gfortran.dg/initialize_2.f90: New. Added: branches/gcc-4_1-branch/gcc/testsuite/gfortran.dg/initialization_2.f90 Modified: branches/gcc-4_1-branch/gcc/fortran/ChangeLog branches/gcc-4_1-branch/gcc/fortran/expr.c branches/gcc-4_1-branch/gcc/testsuite/ChangeLog
Fixed.