fortran/ 2006-10-24  Erik Edelmann  <eedelman@gcc.gnu.org>

PR fortran/29393
        * expr.c (simplify_parameter_variable): Keep rank of original
         expression.

Testsuite/
2006-10-24  Erik Edelmann  <eedelman@gcc.gnu.org>

        PR fortran/29393
        * gfortran.dg/initialize_2.f90: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@118008 138bc75d-0d04-0410-961f-82ee72b054a4